--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-<h1>These are our Recipies</h1>
-<div class="panel panel-default" style="max-width: 500px;">
-  <div class="panel-heading">
-    <h3 class="panel-title">{{recipe.title}}</h3>
-  </div>
-  <div class="panel-body">
-    <p>{{recipe.description}}</p>
-  </div>
-</div>
+<app-recipe-list></app-recipe-list>
