--- a/src/app/components/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <h1> These are our Recipes</h1>
 
-<app-recipe-summary *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-summary>
+<app-recipe-summary *ngFor="let recipe of recipes" [recipe]="recipe" (zoomIn)="talkToOtherComponent(recipe)"></app-recipe-summary>
 
 <div style="clear: both"></div>
 <div class="newrecipe panel panel-default">
