--- a/src/app/components/recipe-summary/recipe-summary.component.html
+++ b/src/app/components/recipe-summary/recipe-summary.component.html
@@ -13,8 +13,7 @@
       <div style="float:left;font-weight: bold ;width: 140px"> Feeds this many:</div>
 
       <div>{{ recipe.feedsThisMany }}</div>
-      <div style="float:left;font-size: 85%; cursor:pointer; padding: 25px" 
-      (click)="zoomInClick()">Zoom</div>
+      <div style="float:left;font-size: 85%; cursor:pointer; padding: 25px" (click)="zoomInClick()">Zoom</div>
     </div>
 
   </div>
